--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,16 +23,13 @@
   background: #1f4b45; 
 }
 
-.btn {
-border: 1.5px solid black;
-}
-
-#preloader{
+.Preloader{
   background-color: white;
   position: fixed;
   width: 100vw;
   height: 100vh;
 }
+
 ::-webkit-scrollbar-track{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
