--- a/src/components/Stats/TimeCard.css
+++ b/src/components/Stats/TimeCard.css
@@ -13,10 +13,15 @@
     font-size: 0.6em;
 }
 
-.btn {
-    border-radius: .844em;
-    font-size: 0.688rem;
-    border: 1.5px solid black;
+.CustomButton {
+    font-weight: bold;
+    border-radius: .844em !important;
+    font-size: 0.688rem !important;
+    border: 1.5px solid black !important;
+}
+
+.CustomButton:focus{
+    outline:0 !important;
 }
 
 .White{
